# trading-bot

./: .env.example  .gitignore  README.md  alpaca_client.py  capitol_trades.py  pyproject.toml  scheduler.py  scheduler.sh  trading_bot.py  wheel_strategy.py
.github/: pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
